bootstrap/bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bootstrap
  labels:
    name: bootstrap
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bootstrap
  namespace: bootstrap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.wiredtentacle.com
    secretName: bootstrap-tls
  rules:
  - host: www.wiredtentacle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bootstrap
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootstrap
  namespace: bootstrap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bootstrap
  template:
    metadata:
      labels:
        app: bootstrap
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        - containerPort: 443
          protocol: TCP
          name: https
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

#        - name: toolbox
#          image: ubuntu:latest
#          command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
#          resources:
#            limits:
#              memory: "128Mi"
#              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: bootstrap
  namespace: bootstrap
spec:
  type: ClusterIP
  selector:
    app: bootstrap
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443
